<resources>
    <string name="app_name">Auxilio Pacientes</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="add_patient_text">Adicionar Paciente</string>
    <string name="add_alarm_text">Adicionar Alarm</string>
    <string name="title_activity_patient">PatientActivity</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="tab_data_text">Dados</string>
    <string name="tab_alarms_text">Alarmes</string>
    <string name="name_text">Nome</string>
    <string name="age_text">Idade</string>
    <string name="birth_date_text">Data de Nacimento</string>
    <string name="toggle_sunday_text">D</string>
    <string name="toggle_monday_text">S</string>
    <string name="toggle_tuesday_text">T</string>
    <string name="toggle_wednesday_text">Q</string>
    <string name="toggle_thursday_text">Q</string>
    <string name="toggle_friday_text">S</string>
    <string name="toggle_saturday_text">S</string>
    <string name="description_text">Descrição</string>
    <string name="delete_text">Excluir</string>
    <string name="data_text">DADOS</string>
    <string name="alarm_text">ALARM</string>
    <string name="select_hour_minutes_text">Selecione a hora e minutos</string>
    <string name="finish_at">Termina</string>
    <string name="ok_text">OK</string>
    <string name="cancel_text">Cancelar</string>
    <string name="yes_text">Sim</string>
    <string name="no_text">Não</string>
    <string name="delete_patient_question_text">Tem certeza que deseja excluir o paciente ?</string>
    <string name="alarm_deleted_text">Alarm foi excluido!</string>
    <string name="alarm_restored">Alarm foi restaurado!</string>
    <string name="undo_text">DESFAZER</string>
    <string name="hint_search">Pesquise aqui</string>
    <string name="label_cancel">CANCELAR</string>
    <string name="label_ok">OK</string>
    <string name="nothing_to_show">Nenhum item listado!</string>
    <string name="wait_text">Aguarde</string>
    <string name="select_patient">Selecione o paciente</string>
    <string name="loading_patients">Carregando Pacientes</string>
    <string name="patient">Paciente</string>
    <string name="color">Cor</string>
    <string name="save_text">Salvar</string>

    <string name="title_activity_alarm">AlarmActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="stop">Parar</string>
    <string name="alarm">Alarme</string>

    <string name="title_activity_fullscreen">FullscreenActivity</string>

</resources>
