
    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/linear_view_search"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical"
        android:background="@android:color/white">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_weight="0"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:id="@+id/txtSearch"
            android:hint="@string/hint_search"
            android:singleLine="true" />


        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="80"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin">

            <ListView
                android:id="@+id/lvwSearch"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
            </ListView>

        </LinearLayout>



        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_weight="0">
            <TableRow
                android:id="@+id/tableRow1"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <Button
                    android:id="@+id/btnCancel"
                    style="?android:attr/borderlessButtonStyle"
                    android:layout_width="0dp"
                    android:layout_weight="50"
                    android:layout_height="wrap_content"
                    android:text="@string/label_cancel"/>


                <Button
                    android:id="@+id/btnOk"
                    style="?android:attr/borderlessButtonStyle"
                    android:layout_width="0dp"
                    android:layout_weight="50"
                    android:layout_height="wrap_content"
                    android:text="@string/label_ok"/>


            </TableRow>
        </TableLayout>

    </LinearLayout>
