<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:fab="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main_content"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="com.unisinos.patienthelper.Activity.PatientActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.design.widget.AppBarLayout
            android:id="@+id/appbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/appbar_padding_top"
            android:theme="@style/AppTheme.AppBarOverlay">

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:layout_weight="1"
                app:layout_scrollFlags="scroll|enterAlways"
                android:background="?attr/colorPrimary"
                app:popupTheme="@style/AppTheme.PopupOverlay"
                app:title="@string/app_name">

            </android.support.v7.widget.Toolbar>

        </android.support.design.widget.AppBarLayout>

        <android.support.design.widget.TabLayout
            android:id="@+id/tab_main"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/appbar"
            app:tabGravity="fill"
            app:tabMode="scrollable">


            <android.support.design.widget.TabItem
                android:id="@+id/tab_data"
                style="@style/TabItem"
                android:icon="@drawable/ic_patient_black"
                android:text="@string/tab_data_text" />

            <android.support.design.widget.TabItem
                android:id="@+id/tab_alarm"
                style="@style/TabItem"
                android:icon="@drawable/ic_alarm_black"
                android:text="@string/tab_alarms_text" />


        </android.support.design.widget.TabLayout>

        <com.unisinos.patienthelper.Class.ScrollHorizontalViewPager
            android:id="@+id/container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/tab_main"
            app:layout_behavior="@string/appbar_scrolling_view_behavior" />

    </RelativeLayout>

    <com.github.clans.fab.FloatingActionButton
        fab:fab_colorNormal="@color/colorAccent"
        fab:fab_colorPressed="@color/colorAccentLight"
        fab:fab_colorRipple="@color/colorFabRipple"
        android:id="@+id/fab_new_alarm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end|bottom"
        android:layout_margin="@dimen/fab_margin"
        android:src="@drawable/ic_action_add_alarm" />

    <com.github.clans.fab.FloatingActionButton
        fab:fab_colorNormal="@color/colorAccent"
        fab:fab_colorPressed="@color/colorAccentLight"
        fab:fab_colorRipple="@color/colorFabRipple"
        android:id="@+id/fab_save_patient"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end|bottom"
        android:layout_margin="@dimen/fab_margin"
        android:src="@drawable/ic_action_save" />


    <com.github.clans.fab.FloatingActionMenu
        android:id="@+id/fab_patient_edit_menu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/fab_margin"
        fab:menu_animationDelayPerItem="55"
        fab:menu_backgroundColor="@android:color/transparent"
        fab:menu_buttonSpacing="0dp"
        fab:menu_colorNormal="@color/colorAccent"
        fab:menu_colorPressed="@color/colorAccentLight"
        fab:menu_colorRipple="@color/colorFabRipple"
        fab:menu_fab_size="normal"
        fab:menu_icon="@drawable/ic_action_edit"
        fab:menu_labels_colorNormal="@color/colorFabLabelNormal"
        fab:menu_labels_colorPressed="@color/colorFabLabelPressed"
        fab:menu_labels_colorRipple="@color/colorFabLabelRipple"
        fab:menu_labels_cornerRadius="3dp"
        fab:menu_labels_ellipsize="none"
        fab:menu_labels_hideAnimation="@anim/fab_slide_out_to_right"
        fab:menu_labels_margin="0dp"
        fab:menu_labels_maxLines="-1"
        fab:menu_labels_padding="8dp"
        fab:menu_labels_position="left"
        fab:menu_labels_showAnimation="@anim/fab_slide_in_from_right"
        fab:menu_labels_showShadow="true"
        fab:menu_labels_singleLine="false"
        fab:menu_labels_textColor="@color/colorFabText"
        fab:menu_labels_textSize="15sp"
        fab:menu_openDirection="up"
        fab:menu_shadowColor="@color/colorShadow"
        fab:menu_shadowRadius="2dp"
        fab:menu_shadowXOffset="1dp"
        fab:menu_shadowYOffset="2dp"
        fab:menu_showShadow="true">


        <com.github.clans.fab.FloatingActionButton
            android:id="@+id/fab_menu_delete_patient"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_action_delete"
            fab:fab_colorNormal="@color/colorAccent"
            fab:fab_colorPressed="@color/colorAccentLight"
            fab:fab_colorRipple="@color/colorFabRipple"
            fab:fab_label="@string/add_patient_text"
            fab:fab_size="mini" />

        <com.github.clans.fab.FloatingActionButton
            android:id="@+id/fab_menu_save_patient"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_action_save"
            fab:fab_colorNormal="@color/colorAccent"
            fab:fab_colorPressed="@color/colorAccentLight"
            fab:fab_colorRipple="@color/colorFabRipple"
            fab:fab_label="@string/add_alarm_text"
            fab:fab_size="mini" />

    </com.github.clans.fab.FloatingActionMenu>


</android.support.design.widget.CoordinatorLayout>
